rozbudowa kasiegowa admin

--- a/npkpir_23/web/admin/sub/ksiegowanie.xhtml
+++ b/npkpir_23/web/admin/sub/ksiegowanie.xhtml
@@ -323,187 +323,187 @@
                         <p:column width="20" headerText="1">
                             <h:outputText value="#{recorda.day1}" rendered="#{recorda.day1 > 0}" />
                             <f:facet name="footer">
-                                <h:outputText value="#{adminKsiegowanieView.sumDay1}" />
+                                <h:outputText value="#{adminKsiegowanieView.sumTotalDay1}" />
                             </f:facet>
                         </p:column>
                         <p:column width="20" headerText="2">
                             <h:outputText value="#{recorda.day2}" rendered="#{recorda.day2 > 0}" />
                             <f:facet name="footer">
-                                <h:outputText value="#{adminKsiegowanieView.sumDay2}" />
+                                <h:outputText value="#{adminKsiegowanieView.sumTotalDay2}" />
                             </f:facet>
                         </p:column>
                         <p:column width="20" headerText="3">
                             <h:outputText value="#{recorda.day3}" rendered="#{recorda.day3 > 0}" />
                             <f:facet name="footer">
-                                <h:outputText value="#{adminKsiegowanieView.sumDay3}" />
+                                <h:outputText value="#{adminKsiegowanieView.sumTotalDay3}" />
                             </f:facet>
                         </p:column>
                         <p:column width="20" headerText="4">
                             <h:outputText value="#{recorda.day4}" rendered="#{recorda.day4 > 0}" />
                             <f:facet name="footer">
-                                <h:outputText value="#{adminKsiegowanieView.sumDay4}" />
+                                <h:outputText value="#{adminKsiegowanieView.sumTotalDay4}" />
                             </f:facet>
                         </p:column>
                         <p:column width="20" headerText="5">
                             <h:outputText value="#{recorda.day5}" rendered="#{recorda.day5 > 0}" />
                             <f:facet name="footer">
-                                <h:outputText value="#{adminKsiegowanieView.sumDay5}" />
+                                <h:outputText value="#{adminKsiegowanieView.sumTotalDay5}" />
                             </f:facet>
                         </p:column>
                         <p:column width="20" headerText="6">
                             <h:outputText value="#{recorda.day6}" rendered="#{recorda.day6 > 0}" />
                             <f:facet name="footer">
-                                <h:outputText value="#{adminKsiegowanieView.sumDay6}" />
+                                <h:outputText value="#{adminKsiegowanieView.sumTotalDay6}" />
                             </f:facet>
                         </p:column>
                         <p:column width="20" headerText="7">
                             <h:outputText value="#{recorda.day7}" rendered="#{recorda.day7 > 0}" />
                             <f:facet name="footer">
-                                <h:outputText value="#{adminKsiegowanieView.sumDay7}" />
+                                <h:outputText value="#{adminKsiegowanieView.sumTotalDay7}" />
                             </f:facet>
                         </p:column>
                         <p:column width="20" headerText="8">
                             <h:outputText value="#{recorda.day8}" rendered="#{recorda.day8 > 0}" />
                             <f:facet name="footer">
-                                <h:outputText value="#{adminKsiegowanieView.sumDay8}" />
+                                <h:outputText value="#{adminKsiegowanieView.sumTotalDay8}" />
                             </f:facet>
                         </p:column>
                         <p:column width="20" headerText="9">
                             <h:outputText value="#{recorda.day9}" rendered="#{recorda.day9 > 0}" />
                             <f:facet name="footer">
-                                <h:outputText value="#{adminKsiegowanieView.sumDay9}" />
+                                <h:outputText value="#{adminKsiegowanieView.sumTotalDay9}" />
                             </f:facet>
                         </p:column>
                         <p:column width="20" headerText="10">
                             <h:outputText value="#{recorda.day10}" rendered="#{recorda.day10 > 0}" />
                             <f:facet name="footer">
-                                <h:outputText value="#{adminKsiegowanieView.sumDay10}" />
+                                <h:outputText value="#{adminKsiegowanieView.sumTotalDay10}" />
                             </f:facet>
                         </p:column>
                         <p:column width="20" headerText="11">
                             <h:outputText value="#{recorda.day11}" rendered="#{recorda.day11 > 0}" />
                             <f:facet name="footer">
-                                <h:outputText value="#{adminKsiegowanieView.sumDay11}" />
+                                <h:outputText value="#{adminKsiegowanieView.sumTotalDay11}" />
                             </f:facet>
                         </p:column>
                         <p:column width="20" headerText="12">
                             <h:outputText value="#{recorda.day12}" rendered="#{recorda.day12 > 0}" />
                             <f:facet name="footer">
-                                <h:outputText value="#{adminKsiegowanieView.sumDay12}" />
+                                <h:outputText value="#{adminKsiegowanieView.sumTotalDay12}" />
                             </f:facet>
                         </p:column>
                         <p:column width="20" headerText="13">
                             <h:outputText value="#{recorda.day13}" rendered="#{recorda.day13 > 0}" />
                             <f:facet name="footer">
-                                <h:outputText value="#{adminKsiegowanieView.sumDay13}" />
+                                <h:outputText value="#{adminKsiegowanieView.sumTotalDay13}" />
                             </f:facet>
                         </p:column>
                         <p:column width="20" headerText="14">
                             <h:outputText value="#{recorda.day14}" rendered="#{recorda.day14 > 0}" />
                             <f:facet name="footer">
-                                <h:outputText value="#{adminKsiegowanieView.sumDay14}" />
+                                <h:outputText value="#{adminKsiegowanieView.sumTotalDay14}" />
                             </f:facet>
                         </p:column>
                         <p:column width="20" headerText="15">
                             <h:outputText value="#{recorda.day15}" rendered="#{recorda.day15 > 0}" />
                             <f:facet name="footer">
-                                <h:outputText value="#{adminKsiegowanieView.sumDay15}" />
+                                <h:outputText value="#{adminKsiegowanieView.sumTotalDay15}" />
                             </f:facet>
                         </p:column>
                         <p:column width="20" headerText="16">
                             <h:outputText value="#{recorda.day16}" rendered="#{recorda.day16 > 0}" />
                             <f:facet name="footer">
-                                <h:outputText value="#{adminKsiegowanieView.sumDay16}" />
+                                <h:outputText value="#{adminKsiegowanieView.sumTotalDay16}" />
                             </f:facet>
                         </p:column>
                         <p:column width="20" headerText="17">
                             <h:outputText value="#{recorda.day17}" rendered="#{recorda.day17 > 0}" />
                             <f:facet name="footer">
-                                <h:outputText value="#{adminKsiegowanieView.sumDay17}" />
+                                <h:outputText value="#{adminKsiegowanieView.sumTotalDay17}" />
                             </f:facet>
                         </p:column>
                         <p:column width="20" headerText="18">
                             <h:outputText value="#{recorda.day18}" rendered="#{recorda.day18 > 0}" />
                             <f:facet name="footer">
-                                <h:outputText value="#{adminKsiegowanieView.sumDay18}" />
+                                <h:outputText value="#{adminKsiegowanieView.sumTotalDay18}" />
                             </f:facet>
                         </p:column>
                         <p:column width="20" headerText="19">
                             <h:outputText value="#{recorda.day19}" rendered="#{recorda.day19 > 0}" />
                             <f:facet name="footer">
-                                <h:outputText value="#{adminKsiegowanieView.sumDay19}" />
+                                <h:outputText value="#{adminKsiegowanieView.sumTotalDay19}" />
                             </f:facet>
                         </p:column>
                         <p:column width="20" headerText="20">
                             <h:outputText value="#{recorda.day20}" rendered="#{recorda.day20 > 0}" />
                             <f:facet name="footer">
-                                <h:outputText value="#{adminKsiegowanieView.sumDay20}" />
+                                <h:outputText value="#{adminKsiegowanieView.sumTotalDay20}" />
                             </f:facet>
                         </p:column>
                         <p:column width="20" headerText="21">
                             <h:outputText value="#{recorda.day21}" rendered="#{recorda.day21 > 0}" />
                             <f:facet name="footer">
-                                <h:outputText value="#{adminKsiegowanieView.sumDay21}" />
+                                <h:outputText value="#{adminKsiegowanieView.sumTotalDay21}" />
                             </f:facet>
                         </p:column>
                         <p:column width="20" headerText="22">
                             <h:outputText value="#{recorda.day22}" rendered="#{recorda.day22 > 0}" />
                             <f:facet name="footer">
-                                <h:outputText value="#{adminKsiegowanieView.sumDay22}" />
+                                <h:outputText value="#{adminKsiegowanieView.sumTotalDay22}" />
                             </f:facet>
                         </p:column>
                         <p:column width="20" headerText="23">
                             <h:outputText value="#{recorda.day23}" rendered="#{recorda.day23 > 0}" />
                             <f:facet name="footer">
-                                <h:outputText value="#{adminKsiegowanieView.sumDay23}" />
+                                <h:outputText value="#{adminKsiegowanieView.sumTotalDay23}" />
                             </f:facet>
                         </p:column>
                         <p:column width="20" headerText="24">
                             <h:outputText value="#{recorda.day24}" rendered="#{recorda.day24 > 0}" />
                             <f:facet name="footer">
-                                <h:outputText value="#{adminKsiegowanieView.sumDay24}" />
+                                <h:outputText value="#{adminKsiegowanieView.sumTotalDay24}" />
                             </f:facet>
                         </p:column>
                         <p:column width="20" headerText="25">
                             <h:outputText value="#{recorda.day25}" rendered="#{recorda.day25 > 0}" />
                             <f:facet name="footer">
-                                <h:outputText value="#{adminKsiegowanieView.sumDay25}" />
+                                <h:outputText value="#{adminKsiegowanieView.sumTotalDay25}" />
                             </f:facet>
                         </p:column>
                         <p:column width="20" headerText="26">
                             <h:outputText value="#{recorda.day26}" rendered="#{recorda.day26 > 0}" />
                             <f:facet name="footer">
-                                <h:outputText value="#{adminKsiegowanieView.sumDay26}" />
+                                <h:outputText value="#{adminKsiegowanieView.sumTotalDay26}" />
                             </f:facet>
                         </p:column>
                         <p:column width="20" headerText="27">
                             <h:outputText value="#{recorda.day27}" rendered="#{recorda.day27 > 0}" />
                             <f:facet name="footer">
-                                <h:outputText value="#{adminKsiegowanieView.sumDay27}" />
+                                <h:outputText value="#{adminKsiegowanieView.sumTotalDay27}" />
                             </f:facet>
                         </p:column>
                         <p:column width="20" headerText="28">
                             <h:outputText value="#{recorda.day28}" rendered="#{recorda.day28 > 0}" />
                             <f:facet name="footer">
-                                <h:outputText value="#{adminKsiegowanieView.sumDay28}" />
+                                <h:outputText value="#{adminKsiegowanieView.sumTotalDay28}" />
                             </f:facet>
                         </p:column>
                         <p:column width="20" headerText="29">
                             <h:outputText value="#{recorda.day29}" rendered="#{recorda.day29 > 0}" />
                             <f:facet name="footer">
-                                <h:outputText value="#{adminKsiegowanieView.sumDay29}" />
+                                <h:outputText value="#{adminKsiegowanieView.sumTotalDay29}" />
                             </f:facet>
                         </p:column>
                         <p:column width="20" headerText="30">
                             <h:outputText value="#{recorda.day30}" rendered="#{recorda.day30 > 0}" />
                             <f:facet name="footer">
-                                <h:outputText value="#{adminKsiegowanieView.sumDay30}" />
+                                <h:outputText value="#{adminKsiegowanieView.sumTotalDay30}" />
                             </f:facet>
                         </p:column>
                         <p:column width="20" headerText="31">
                             <h:outputText value="#{recorda.day31}" rendered="#{recorda.day31 > 0}" />
                             <f:facet name="footer">
-                                <h:outputText value="#{adminKsiegowanieView.sumDay31}" />
+                                <h:outputText value="#{adminKsiegowanieView.sumTotalDay31}" />
                             </f:facet>
                         </p:column>
                   
