--- a/npkpir_23/web/ksiegowa/ksiegowaImportFaktury.xhtml
+++ b/npkpir_23/web/ksiegowa/ksiegowaImportFaktury.xhtml
@@ -46,7 +46,7 @@
                             <p:growl life="3600"  id="messages1"/>
                             <p:fileUpload chooseIcon="fa fa-upload" listener="#{importFakturyView.importujsprzedaz}" 
                                           mode="advanced" dragDropSupport="true" fileLimit="1"
-                                          update="messages1 importtabela" sizeLimit="4000000"  auto="true"
+                                          update="messages1 importtabela"   auto="true"
                                           validatorMessage="Nieprawidłowy typ pliku" invalidFileMessage="Nieprawidłowy typ pliku" invalidSizeMessage="Plik za duży"
                                           fileLimitMessage="Można załadować tylko jeden plik na jedno ładowanie"  onstart="PF('dialogAjaxCzekaj').show();"
                                           uploadLabel="Wczytaj" label="Wybierz" cancelLabel="Rezygnuj" 
