DROBNE NAPRAWY BIUROWE

--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_importjpkfafa.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_importjpkfafa.xhtml
@@ -49,7 +49,7 @@
             </p:panelGrid>
             <p:fileUpload chooseIcon="fa fa-upload" listener="#{importFakturyView.importujsprzedazfk}" 
                           mode="advanced" dragDropSupport="true" fileLimit="1"
-                          update="importtabelafafa" sizeLimit="2000000"  auto="true"
+                          update="importtabelafafa"   auto="true"
                           validatorMessage="Nieprawidłowy typ pliku" invalidFileMessage="Nieprawidłowy typ pliku" invalidSizeMessage="Plik za duży"
                           fileLimitMessage="Można załadować tylko jeden plik na jedno ładowanie"  
                           uploadLabel="Wczytaj" label="Wybierz" cancelLabel="Rezygnuj" 
