--- a/npkpir_23/web/guest/sub/zestawienieRok_dane.xhtml
+++ b/npkpir_23/web/guest/sub/zestawienieRok_dane.xhtml
@@ -8,7 +8,7 @@
 
     <p:tab id="archiwum" title="Dane zbiorcze za rok #{WpisView.rokWpisu}" >
         <p:outputPanel deferred="true">
-            <p:panelGrid layout="tabular" id="zestawienieroczne" columns="12"  rendered="#{WpisView.ryczalt0ksiega1}" style="max-width: 900px;">
+            <p:panelGrid layout="tabular" id="zestawienieroczne" columns="12"  rendered="#{WpisView.ryczalt0ksiega1}" style="max-width: 1200px;">
                 <p:dataTable lazy="false"   var="wpis" value="#{kolmn.kolumnZest}" id="dokumentyLista" > 
                     <p:column headerText="kolumny" id="przychsprz">  
                         <h:outputText value="#{wpis}" style="#{wpis eq 'razem przych.' ? 'color: red' : wpis eq 'razem koszty' ? 'color: blue' : null }"/>
@@ -177,13 +177,13 @@
                         </h:outputText>
                     </p:column>
                 </p:dataTable>
-                <p:dataTable lazy="false"   var="wpis" value="#{kolmn.kolumnZest}" id="dokumentyLista2" > 
+                <p:dataTable lazy="false"   var="wpis" value="#{kolmn.kolumnZest}" id="dokumentyLista2" style="width: 100px;"> 
                     <p:column headerText="kolumny" id="przychsprz">  
                         <h:outputText value="#{wpis}" style="#{wpis eq 'razem przych.' ? 'color: red' : wpis eq 'razem koszty' ? 'color: blue' : null }"/>
                     </p:column>
                 </p:dataTable>
-                <p:dataTable lazy="false"   var="wpis" value="#{zestawienieView.wrok}" id="dokumentyrok" > 
-                    <p:column headerText="rok" id="idColumn" >  
+                <p:dataTable lazy="false"   var="wpis" value="#{zestawienieView.wrok}" id="dokumentyrok"  style="width: 120px;"> 
+                    <p:column headerText="rok" id="idColumn" width="200">  
                         <h:outputText value="#{wpis}" style="float: right;">
                             <f:convertNumber maxFractionDigits="2"
                                              groupingUsed="true"
@@ -370,7 +370,7 @@
                     </p:column>
                 </p:dataTable>
                 <p:dataTable lazy="false"   var="wpis" value="#{zestawienieRyczaltView.rok}" id="dokumentyRrok" > 
-                    <p:column headerText="rok" id="idColumn" >  
+                    <p:column headerText="rok" id="idColumn" width="150" >  
                         <h:outputText value="#{wpis}" style="float: right;" >
                             <f:convertNumber maxFractionDigits="2"
                                              groupingUsed="true"
