--- a/npkpir_23/web/ksiegowaFK/ksiegowaFKDokument.xhtml
+++ b/npkpir_23/web/ksiegowaFK/ksiegowaFKDokument.xhtml
@@ -156,6 +156,7 @@
                     <ui:include src="sub/dialog/dialog_importinterpaper.xhtml"/>
                     <ui:include src="sub/dialog/dialog_importzorinraport.xhtml"/>
                     <ui:include src="sub/dialog/dialog_importamazoncavtrmodsv.xhtml"/>
+                    <ui:include src="sub/dialog/dialog_importshopify.xhtml"/>
                     <ui:include src="sub/dialog/dialog_importamazoncsv.xhtml"/>
                     <ui:include src="sub/dialog/dialog_importamazoncsv_nazwy.xhtml"/>
                     <ui:include src="sub/dialog/dialog_importtaxuallyxls.xhtml"/>
