--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_importshopify.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_importshopify.xhtml
@@ -15,20 +15,20 @@
         }
     </style>
 
-    <p:dialog id="importamazoncavtrmodsv" header="Amazon pobieranie danych Nowy 2024.11" widgetVar="importamazoncavtrmodsv" height="900" width="1450"
-              resizable="false"  onShow="ustawdialog('importamazoncavtrmodsv','menudokumenty',1750,900);" closeOnEscape="true" onHide="resetujdialog('importamazoncavtrmodsv');" >
-        <p:ajax event="open" listener="#{amazonAVTRmod.init()}" update="panelplik amazonloadavtrmod importtabelaavtrmod"/>
+    <p:dialog id="importshopify" header="Amazon pobieranie danych Nowy 2024.11" widgetVar="importshopify" height="900" width="1450"
+              resizable="false"  onShow="ustawdialog('importshopify','menudokumenty',1750,900);" closeOnEscape="true" onHide="resetujdialog('importshopify');" >
+        <p:ajax event="open" listener="#{shopify.init()}" update="panelplik shopify importtabelaavtrmod"/>
         <p:ajax event="close" listener="#{dokfkView.resetujzaksiegowaneimport}" update=":akordeon5:form_importinterpaper"/>
         <!--        <h:form>
                     <p:commandButton value="uzupełnij" actionListener="#{dokfkView.uzupelnijdokumentyodkontrahenta()}"/>
                 </h:form>-->
         <bcf:ajaxs/>
-        <h:outputText value="Import dokumentów z pliku CSV Amazon VAT Transactions Report. "/><h:outputText value="Pobiera " style="color: #0066ff"/>
-        <h:form id="amazonloadavtrmod">
+        <h:outputText value="Import dokumentów z pliku CSV Shopify. "/>
+        <h:form id="shopify">
             <p:growl life="3600"  id="messages1"/>
             <p:panelGrid layout="tabular" columns="3">
                 <p:panelGrid layout="tabular" columns="1">
-                    <p:fileUpload chooseIcon="fa fa-upload" listener="#{amazonAVTRmod.importujsprzedaz}" 
+                    <p:fileUpload chooseIcon="fa fa-upload" listener="#{shopify.importujsprzedaz}" 
                                   mode="advanced" fileLimit="1" auto="true"
                                   update="messages1 importtabelaavtrmod" 
                                   validatorMessage="Nieprawidłowy typ pliku" invalidFileMessage="Nieprawidłowy typ pliku" invalidSizeMessage="Plik za duży"
@@ -42,16 +42,16 @@
         <h:form id="importtabelaavtrmod">
             <p:panelGrid layout="grid" columns="8">
                 <h:outputText value="netto"/>
-                <bcf:outputpl value="#{amazonAVTRmod.razemnetto}"/>
+                <bcf:outputpl value="#{shopify.razemnetto}"/>
                 <h:outputText value="vat"/>
-                <bcf:outputpl value="#{amazonAVTRmod.razemvat}"/>
+                <bcf:outputpl value="#{shopify.razemvat}"/>
                 <h:outputText value="brutto"/>
-                <bcf:outputpl value="#{amazonAVTRmod.razembrutto}"/>
+                <bcf:outputpl value="#{shopify.razembrutto}"/>
                 <h:outputText value="ilość"/>
-                <bcf:outputpl0 value="#{amazonAVTRmod.razemilosc}"/>
+                <bcf:outputpl0 value="#{shopify.razemilosc}"/>
             </p:panelGrid>
-            <p:dataTable lazy="false"   var="wpisama" value="#{amazonAVTRmod.lista}" id="dokumentyLista" 
-                         rowIndexVar="index" filteredValue="#{amazonAVTRmod.listafilter}"
+            <p:dataTable lazy="false"   var="wpisama" value="#{shopify.lista}" id="dokumentyLista" 
+                         rowIndexVar="index" filteredValue="#{shopify.listafilter}"
                          style="width: 1690px; margin-top: 5px;overflow-x: scroll;max-height: 550px;overflow-y:scroll" rowKey="#{wpisama.serial}" 
                          scrollRows="11" scrollable="true"
     
@@ -62,7 +62,7 @@
                 <p:ajax event="filter" global="false" />
 
                 <f:facet name="header">  
-                    <h:outputText value="Zestawienie #{amazonAVTRmod.lista.size()} zaimportowanych dokumentów z pliku csv" />  
+                    <h:outputText value="Zestawienie #{shopify.lista.size()} zaimportowanych dokumentów z pliku csv" />  
                     <h:outputText value="- wyszukiwanie: " />  
                     <p:inputText id="globalFilter" onkeyup="PF('dokTable1').filter()" style="width:250px" placeholder="wyszukiwane wyrażenie" />  
                     <!--                    <p:commandButton id="toggler" type="button" value="Kolumny" style="float:right" icon="ui-icon-calculator" />
@@ -165,11 +165,11 @@
                 </p:column>
             </p:dataTable> 
             <p:growl life="3600"  id="messages2" ><p:autoUpdate/></p:growl>
-            <p:commandButton  value="druk OSS"  style="margin-top: 5px; width: 120px;" actionListener="#{amazonAVTRmod.drukujfk()}"  rendered="#{amazonAVTRmod.lista.size() gt 0}"/>
-            <p:commandButton  value="zaksięguj do JPK" style="margin-top: 5px; width: 120px; margin-left: 20px;" actionListener="#{amazonAVTRmod.zaksiegujWDTjpk()}"  rendered="#{amazonAVTRmod.lista.size() gt 0}"/>
-            <p:commandButton  value="usun miesiąc" style="margin-top: 5px; width: 120px; margin-left: 20px;" actionListener="#{amazonAVTRmod.usunmiesiac()}"/>
-            <p:commandButton value="zachowaj intrastat" style="margin-top: 5px; width: 120px; margin-left: 20px;"  update="importtabelaintrastat" actionListener="#{amazonAVTRmod.zaksiegujDaneIntrastat()}"  rendered="#{amazonAVTRmod.listaintrastat.size() gt 0}"/>
-             <p:commandButton value="pobierz intrastat"  style="margin-top: 5px; width: 120px; margin-left: 20px;"  actionListener="#{amazonAVTRmod.generujIntrastat()}" rendered="#{amazonAVTRmod.listaintrastat.size() gt 0}"/>
+            <p:commandButton  value="druk OSS"  style="margin-top: 5px; width: 120px;" actionListener="#{shopify.drukujfk()}"  rendered="#{shopify.lista.size() gt 0}"/>
+            <p:commandButton  value="zaksięguj do JPK" style="margin-top: 5px; width: 120px; margin-left: 20px;" actionListener="#{shopify.zaksiegujWDTjpk()}"  rendered="#{shopify.lista.size() gt 0}"/>
+            <p:commandButton  value="usun miesiąc" style="margin-top: 5px; width: 120px; margin-left: 20px;" actionListener="#{shopify.usunmiesiac()}"/>
+            <p:commandButton value="zachowaj intrastat" style="margin-top: 5px; width: 120px; margin-left: 20px;"  update="importtabelaintrastat" actionListener="#{shopify.zaksiegujDaneIntrastat()}"  rendered="#{shopify.listaintrastat.size() gt 0}"/>
+             <p:commandButton value="pobierz intrastat"  style="margin-top: 5px; width: 120px; margin-left: 20px;"  actionListener="#{shopify.generujIntrastat()}" rendered="#{shopify.listaintrastat.size() gt 0}"/>
 
         </h:form>
 
