jpk_kr za caly rok

--- a/npkpir_23/web/ksiegowaFK/sub/menu/menudokumenty.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/menu/menudokumenty.xhtml
@@ -52,7 +52,8 @@
                     <p:menuitem value="rozrachunki wg kont" onclick="PF('rozrachunkiPrzeglad').show();"
                                          update="formwpisrozrachunki form1 tabelanowerozrachunki tabelazsumamirozrach"></p:menuitem>
                     <p:menuitem value="zestawienia"  outcome="guestwynikFK" icon="ui-icon-circle-arrow-e" oncomplete="$('#akordeon\\:symulacjawyniku').click();"/>
-                    <p:menuitem value="generuj JPK_KR za miesiąc" actionListener="#{jPKKRView.przygotuj()}"  icon="ui-icon-circle-arrow-e" />  
+                    <p:menuitem value="generuj JPK_KR za zamknięty miesiąc" actionListener="#{jPKKRView.przygotuj()}"  icon="ui-icon-circle-arrow-e" />  
+                    <p:menuitem value="generuj JPK_KR za zamknięty rok" actionListener="#{jPKKRView.przygotujrok()}"  icon="ui-icon-circle-arrow-e" />  
                 </p:menu>  
             </h:form>
         </p:tab>
